#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======
Tag: V00-03-59
2016-05-02 Mikhail S. Dubrovin
- det_ndarr_average - add option -a to control image processing algorithms before averaging.

Tag: V00-03-58
2016-04-29 Christopher O'Grady and Dan Damiani
- Added Dan's code for new USDUSB detector and code for retrieving
  cspad2x2 gain maps.

Tag: V00-03-57
2016-04-25 Mikhail S. Dubrovin
- det_ndarr_raw_proc - use det.save_asdaq in stead of save_txtnda

Tag: V00-03-56
2016-04-22 Christopher O'Grady
- add OceanDetector to support oceanoptics spectrometer

Tag: V00-03-55
2016-04-20 TJ Lane and Christopher O'Grady
- add Generic1DDetector and subclassed GenericWFDetector to provide
  user-interface to new Generic1D datatype.

Tag: V00-03-54
2016-04-16 Mikhail S. Dubrovin
- modify geometry-def-epix100a.data to get default det.image() orientation like in raw data.

Tag: V00-03-53
2016-04-13 Christopher O'Grady
- Change two MEC BLD detectors to return Ipimb types, not DDL

Tag: V00-03-52
2016-03-28 TJ Lane and Christopher O'Grady
- Added unit tests for Detector module

Tag: V00-03-51
2016-03-28 Christopher O'Grady
- Restore Mikhail's sphinx documentation

Tag: V00-03-50
2016-03-26 TJ Lane
- PyDetector - fix DetInfo from raising when passed Epics name w/colon
- EpicsDetector - added simple __main__

Tag: V00-03-49
2016-03-25 Mikhail S. Dubrovin
- PyDetectorAccess - add methods ndarray_from_image and default_geometry, update ex_all_dets.py
- AreaDetector - add method ndarray_from_image and its test ex_ndarray_from_image
- add examples/ex_ndarray_from_image.py data/geometry-def-epix100a.data
	
Tag: V00-03-48
2016-03-24 Mikhail S. Dubrovin