@@ -51,5 +51,13 @@ def table_from_cspad_ndarr(nda_cspad) :
     return np.hstack([np.vstack([nda[q,s,:] for s in range(nsegq)]) for q in range(quads)])
 
 #------------------------------
+
+def divide_protected(num, den, vsub_zero=0) :
+    """Returns result of devision of numpy arrays num/den with substitution of value vsub_zero for zero den elements.
+    """
+    pro_num = np.select((den!=0,), (num,), default=vsub_zero)
+    pro_den = np.select((den!=0,), (den,), default=1)
+    return pro_num / pro_den
+
 #------------------------------
 #------------------------------
